--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,113 +6,14 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-
+    <%=render "partials/nav"  %>
     <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
-    <section class="blogTiles">
-      <div class="container">
-        <div class="">
-          <h2>Drop <span>It</span></h2>
-          <div class="row">
-            <div class="col-sm-8 col-md-6">
-              <a href="#" class="black tile">
-                <div class="tileImageFirst">
-                  <img class="img-responsive img-fluid" src="https://source.unsplash.com/WLUHO9A_xik/1080x700">
-                </div>
-                <div class="tileContentFirst">
-                  <h3>Most Recent Test Post</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed placerat porta ex, sed ullamcorper ipsum lacinia nec.<span>...</span></p>
-                </div>
-                <div class="tileOverlay">
-                  <span>Read More</span>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-4 col-md-3">
-              <a href="#" class="tile">
-                <div class="tileImage">
-                  <img class="img-responsive img-fluid" src="https://source.unsplash.com/Z1tWLxk7krs/1080x700">
-                </div>
-                <div class="tileContent">
-                  <h3>Testing Posts Yo</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed placerat porta ex, sed ullamcorper ipsum lacinia nec.<span>...</span></p>
-                </div>
-                <div class="tileOverlay">
-                  <span>Read More</span>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-4 col-md-3">
-              <a href="#" class="tile">
-                <div class="tileImage">
-                  <img class="img-responsive img-fluid" src="https://source.unsplash.com/GnU2altkUSQ/1080x700">
-                </div>
-                <div class="tileContent">
-                  <h3>Filler Post Dude</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed placerat porta ex, sed ullamcorper ipsum lacinia nec.<span>...</span></p>
-                </div>
-                <div class="tileOverlay">
-                  <span>Read More</span>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-4 col-md-3">
-              <a href="#" class="tile">
-                <div class="tileImage">
-                  <img class="img-responsive img-fluid" src="https://source.unsplash.com/X6CZGpJBi8U/1080x700">
-                </div>
-                <div class="tileContent">
-                  <h3>Mhmm.. Filler Posts</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed placerat porta ex, sed ullamcorper ipsum lacinia nec.<span>...</span></p>
-                </div>
-                <div class="tileOverlay">
-                  <span>Read More</span>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-4 col-md-3">
-              <a href="#" class="tile">
-                <div class="tileImage">
-                  <img class="img-responsive img-fluid" src="https://source.unsplash.com/czVtGYACOMg/1080x700">
-                </div>
-                <div class="tileContent">
-                  <h3>Not a Lorem Ipsum Post</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed placerat porta ex, sed ullamcorper ipsum lacinia nec.<span>...</span></p>
-                </div>
-                <div class="tileOverlay">
-                  <span>Read More</span>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-4 col-md-3">
-              <a href="#" class="tile">
-                <div class="tileImage">
-                  <img class="img-responsive img-fluid" src="https://source.unsplash.com/xMh_ww8HN_Q/1080x700">
-                </div>
-                <div class="tileContent">
-                  <h3>Old of Posts</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed placerat porta ex, sed ullamcorper ipsum lacinia nec.<span>...</span></p>
-                </div>
-                <div class="tileOverlay">
-                  <span>Read More</span>
-                </div>
-              </a>
-            </div>
-            <div class="col-sm-4 col-md-3">
-              <a href="#" class="tileLast">
-                <span>“Always pass on what you have learned.”</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    
-    <%= yield %>
+    <p class="alert"><%= alert %></p>    
+   <%= yield %> 
   </body>
 </html>
